--- a/asteroids.css
+++ b/asteroids.css
@@ -3,5 +3,5 @@ body,html{
     color:green;
     padding: 0px;
     margin: 0px;
-    font-family: 'Ranchers', cursive;
+    font-family: 'Orbitron', sans-serif;
 }
